--- a/styles.css
+++ b/styles.css
@@ -19,18 +19,59 @@ header {
 }
 
 .departures {
-    background-color: rgc(6, 6, 6);
+    background-color: rgb(6, 6, 6);
     border-radius: 10px;
     padding: 10px;
 }
 
-.departures tables {
+.departures table {
     background-color: rgb(46, 46, 46);
     text-align: left;
 }
 
 .departures table td {
+    height: 50px;
+}
+
+.departures table div {
     border: solid rgb(26, 26, 26);
     background-color: rgb(0,0,0);
     float: left;
+    height: 40px;
+}
+
+#time {
+    width: 160px;
+}
+
+#destination {
+    width: 260px;
+}
+
+#flight{
+    width: 205px;
+}
+
+#gate {
+    width: 135px;
+}
+
+#remarks {
+    width: 260px;
+}
+
+.flip {
+    animation: 0.5s linear flipping;
+}
+
+@keyframes flipping {
+    0% {
+        transform: rotateX(0deg);
+    }
+    50% {
+        transform: rotateX(90deg);
+    }
+    100% {
+        transform: rotateX(0deg);
+    }
 }
